# auto-ppt-generator

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test.py
